# sss_shared_lib

./: Cargo.toml  README.md  run_c_example.sh
examples/: c_example.c  create_token.rs  fetch_assets.rs
include/: sss_shared.h
src/: error.rs  ffi.rs  ffi_utils.rs  lib.rs  token.rs
