[package]
name = "sss_shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "sss_shared"
crate-type = ["cdylib", "rlib"] #TODO: remove rlib

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
mpl-token-metadata = "5.1.0"
solana-program = "2.2.1"
solana-rpc-client = "2.2.3"
solana-sdk = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
tiny-bip39 = "2.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
